demo_manifests/myns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: suren-m
spec: {}
status: {}
