demo_manifests/deploy-crash-test-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crash-test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crash-test-app
  template:
    metadata:
      labels:
        app: crash-test-app
    spec:
      containers:
      - name: crash-test-app
        image: surenmcode/crash-test-app:1.0
        imagePullPolicy: Always
        resources:
          limits:
            memory: "64Mi"
            cpu: "50m"
        ports:
        - containerPort: 8080        
        readinessProbe:
          httpGet:
            path: /readiness
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /liveliness
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 1
