demo_manifests/pod_config_and_secrets.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: web
  annotations:
    description: sample
  name: web
spec:
  volumes:
  - name: mysecretvol
    secret:
      secretName: mysecret  
  - name: myconfigvol
    configMap:
      name: myconfig

  containers:
  - image: nginx:1.19.0
    name: website
    ports:
    - containerPort: 80
    resources:
      limits:
        cpu: "1"
      requests:
        cpu: 300m
    volumeMounts:
    - name: mysecretvol
      mountPath: /etc/mysecret
      readOnly: true
    - name: myconfigvol
      mountPath: /etc/myconfig
  - image: redis
    name: cache
    volumeMounts:
    - name: mysecretvol
      mountPath: /etc/mysecret
    - name: myconfigvol
      mountPath: /etc/myconfig2
    resources:
      limits:
        cpu: "1"
      requests:
        cpu: 200m    
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
