demo_manifests/pod_limitrange.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: demo
  name: demo
spec:
  containers:
  - image: nginx
    name: demo
    resources: 
      limits:
        cpu: 2
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
