demo_manifests/svc-np.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: webdeploy
  name: websvc-np
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: webdeploy
  type: NodePort
status:
  loadBalancer: {}
