demo_manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: webdeploy
  name: websvc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: webdeploy
  type: ClusterIP
status:
  loadBalancer: {}
