demo_manifests/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: 
    matchLabels:
        run: web
  policyTypes:
  - Ingress
  - Egress
